--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,12 @@
 			<version>2.1.3</version>
 		</dependency>
 		
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.4</version>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
