--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.mvc.view.suffix=.jsp
 mybatis.type-aliases-package=com.example.lavrastore.domain
 mybatis.mapper-locations=com/example/lavrastore/dao/mybatis/mapper/**/*.xml
 
-#spring.devtools.livereload.enabled=true
-spring.devtools.livereload.enabled=false
+spring.devtools.livereload.enabled=true
+#spring.devtools.livereload.enabled=false
 
 logging.level.com.example.lavrastore.dao.mybatis.mapper=DEBUG
 
