--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,16 @@ spring.devtools.livereload.enabled=true
 
 logging.level.com.example.lavrastore.dao.mybatis.mapper=DEBUG
 
+#jpa
+
+logging.level.com.example.jpetstore.dao.mybatis.mapper=DEBUG
+logging.level.org.hibernate=info
+
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.database=oracle
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# do not changes camel case to snake case, which is the default spring.jpa.hibernate.naming.implicit-strategy 
+
 server.port=8083
