--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,7 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # do not changes camel case to snake case, which is the default spring.jpa.hibernate.naming.implicit-strategy 
 
+#server.servlet.jsp.init-parameters.development=true
+
+mybatis.configuration.cache-enabled=false
 server.port=8083
