제출용 어쩌구

--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
    </parent>
    
    <groupId>com.example</groupId>
-   <artifactId>jpetstore-boot</artifactId>
+   <artifactId>lavrastore-boot</artifactId>
    <packaging>war</packaging>
    <version>0.0.1-SNAPSHOT</version>
-   <name>jpetstore.boot</name>
-   <description>JPetStore based on Spring Boot</description>
-
+   <name>lavrastore.boot</name>
+   <description>LavraStore based on Spring Boot</description>
+	
    <properties>
       <java.version>1.8</java.version>
    </properties>
@@ -38,23 +38,24 @@
       </dependency>
 
       <!-- Need this to compile JSP -->
+      <!-- 
       <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
          </dependency>
-         
+         -->
       <dependency>
          <groupId>org.mybatis.spring.boot</groupId>
          <artifactId>mybatis-spring-boot-starter</artifactId>
          <version>2.1.3</version>
       </dependency>
       
-   <!--    <dependency>
+     <dependency>
          <groupId>com.oracle.database.jdbc</groupId>
          <artifactId>ojdbc6</artifactId>
          <version>11.2.0.4</version>
          <scope>runtime</scope>
-      </dependency> -->
+      </dependency> 
 
       <dependency>
          <groupId>org.springframework.boot</groupId>
@@ -79,10 +80,19 @@
           <artifactId>javax.jws-api</artifactId>
           <version>1.1</version>
       </dependency>
+      
+      <!-- 추가 -->
+	<dependency>
+   		<groupId>org.springframework.boot</groupId>
+   		<artifactId>spring-boot-starter-tomcat</artifactId>
+   		<scope>provided</scope>
+	</dependency> 
+	
    </dependencies>
    
 
    <build>
+   	  <finalName>${artifactId}</finalName>
       <plugins>
          <plugin>
             <groupId>org.springframework.boot</groupId>
@@ -90,5 +100,5 @@
          </plugin>
       </plugins>
    </build>
-
+	
 </project>
