--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ logging.level.com.example.lavrastore.dao.mybatis.mapper=DEBUG
 
 #jpa
 
-logging.level.com.example.jpetstore.dao.mybatis.mapper=DEBUG
+#logging.level.com.example.jpetstore.dao.mybatis.mapper=DEBUG
 logging.level.org.hibernate=info
 
 spring.jpa.generate-ddl=false
@@ -39,4 +39,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #server.servlet.jsp.init-parameters.development=true
 
 mybatis.configuration.cache-enabled=false
-server.port=8083
+server.port=8080
